# tic-tac-toe-Slint

./: CNAME  Cargo.toml  README.md  index.html
pkg/: package.json  tic_tac_toe.d.ts  tic_tac_toe.js  tic_tac_toe_bg.wasm.d.ts
src/: main.rs
ui/: appwindow.slint
