[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["Bruno <br_coelho98@hotmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"

[build-dependencies]
slint-build = "1.3"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.90" }
getrandom = { version = "0.2.12", features = ["js"] }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

